fix fix Carga de Juego

--- a/public/Museo-Origami-Juego-Html/index.html
+++ b/public/Museo-Origami-Juego-Html/index.html
@@ -58,11 +58,8 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
-      var loaderUrl =
-        "Museo-Origami-Juego-Html/" +
-        buildUrl +
-        "/Museo-Origami-Juego-Html.loader.js";
+      var buildUrl = "Museo-Origami-Juego-Html/Build";
+      var loaderUrl = buildUrl + "/Museo-Origami-Juego-Html.loader.js";
       var config = {
         dataUrl: buildUrl + "/Museo-Origami-Juego-Html.data",
         frameworkUrl: buildUrl + "/Museo-Origami-Juego-Html.framework.js",
